--- a/ringapp/templates/ringapp/property_list.html
+++ b/ringapp/templates/ringapp/property_list.html
@@ -29,12 +29,11 @@
             </div></td>
         </tr>
         {% endfor %}
-
       {% else %}
-        <tr><td>(No rings were retrieved.)</td></tr>
+        <p class="list-group-item">(No properties were retrieved.)</p>
       {% endif %}
       </tbody>
-      </table>
+    </table>
   </div>
 </div>
 
