--- a/moduleapp/templates/moduleapp/property_list.html
+++ b/moduleapp/templates/moduleapp/property_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load mathfilters %}
 
 {% block title %}Module properties{% endblock %}
 
@@ -9,15 +10,33 @@
     <div class="panel-heading"><h1>Module properties</h1>
       <p>This is the comprehensive list of module properties in the database.</p>
     </div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Definition</th>
+          <th>% Complete</th>
+        </tr>
+      </thead>
+      <tbody>
     <div class="list-group">
 	{% if object_list %}
 	    {% for item in object_list %}
-		<a class="list-group-item" href="{% url 'module-property-detail' item.id %}"><div class="row"><div class="col-md-3"><h4>{{ item.name }}</h4></div><div class="col-md-6">{{ item.definition }}</div></div></a>
+		<tr>
+        <td><a href="{% url 'module-property-detail' item.id %}" >
+            <div style="height:100%;width:100%">{{ item.name }}</div></a></td>
+        <td><div class="col-md-6">{{ item.definition }}</div></td>
+        <td><div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: {{ item.percent_known | mul:'100' }}%;">{{ item.percent_known|mul:'100'|floatformat }}%</div>
+            </div></td>
+        </tr>
 	    {% endfor %}
 	{% else %}
 	    <p class="list-group-item">(No properties were retrieved.)</p>
 	{% endif %}
     </div>
+    </tbody>
+    </table>
   </div>
 </div>
 {% endblock %}
