--- a/ringapp/templates/ringapp/property_detail.html
+++ b/ringapp/templates/ringapp/property_detail.html
@@ -98,7 +98,7 @@
                     {% else %}
                     <td></td>
                     {% endif %}
-                    <td><a class="list-group-item" href="{% url 'property-detail' item.0.id %}">
+                    <td><a class="list-group-item" href="{% url 'ring-detail' item.0.id %}">
                         {{ item.0.name }}</a></td>
                     {% if item.2 == True %}
                     <td><i class="glyphicon glyphicon-ok"></i></td>
