--- a/ringapp/templates/ringapp/property_detail.html
+++ b/ringapp/templates/ringapp/property_detail.html
@@ -47,10 +47,10 @@
             <ul>
             {% for item in lacks_mp %}
             <li>{{ item.metaproperty.name }}
-            {% if item.example is not None %}
-                (Counterexample: <a href="{% url 'ring-detail' item.example.id %}">$R_{ {{ item.example.id }} }$</a>)
-            {% elif item.relation is not None %}
+            {% if item.relation is not None %}
                 (Counterexample: <a href="{% url 'ring-detail' item.relation.first_id %}">$R_{ {{ item.relation.first_id }} }$</a> {{ item.relation.get_relation_type_display }} <a href="{% url 'ring-detail' item.relation.second_id %}">$R_{ {{item.relation.second_id}} }$</a>)
+            {% elif item.example is not None %}
+                (Counterexample: <a href="{% url 'ring-detail' item.example.id %}">$R_{ {{ item.example.id }} }$</a>)
             {% else %}
                 (counterexample needed)
             {% endif %}
