typo in ratelimit html

--- a/ringapp/templates/ringapp/ratelimited.html
+++ b/ringapp/templates/ringapp/ratelimited.html
@@ -6,7 +6,7 @@
 <div class="container">
     <h1>Slow down</h1>
   <div class="col-md-12 content">
-      <p>Unfortunately, your request was automatically ratelimited. You should be able to repeat your request after as short while.</p>
+      <p>Unfortunately, your request was automatically ratelimited. You should be able to repeat your request after a short while.</p>
   </div>
 </div>
 
