Add link to misfits page.  Include module content in sitemap

--- a/ringapp/templates/ringapp/faq.html
+++ b/ringapp/templates/ringapp/faq.html
@@ -11,8 +11,9 @@
             <div class="panel-heading"><b>Do all the rings here have identity?</b></div>
             <div class="panel-body">
                 Yes: the reason is that a great deal of the logic connecting properties here
-                uses the assumption that the ring has identity. However, we do plan to keep a list
-                of random useful examples of rings without identity.
+                uses the assumption that the ring has identity. However, there are many interesting examples
+                out there that are not quite rings, and it would be a pity to overlook them.  For this reason,
+                we will keep <a href="/misfits">a page of misfit examples.</a>
             </div>
         </div>
         <div class="panel panel-default">
